[package]
name = "fetchit"
version = "1.0.0"
edition = "2021"
authors=["Ruturajn <nanotiruturaj@gmail.com>"]
description="A System fetch tool for Linux written in Rust"

# Optimization paramaters, for reducing the binary size.
# Taken from "https://github.com/johnthagen/min-sized-rust"
[profile.release]
strip = true
# opt-level = "z"  # Optimize for size.
lto = "fat"
panic = "abort"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
sysinfo = "0.29.10"
uptime_lib = "0.2.2"
